syntax = "proto3";

option go_package="./seckill";
package seckill;

message SeckillReq {
  int64 Uid = 1;
  int64 ActivityId = 2;
  int64 GoodsId    = 3;
  int64 StockId    = 4;
  int64 BuyCnt     = 5;
  int64 AccessTime = 6;
}


message BaseSeckillResp {
  int64 code = 1;
  string message = 2;
}

service Seckill {
  rpc Seckill(SeckillReq) returns(BaseSeckillResp);   // TCC模式
  rpc Seckill2(SeckillReq) returns(BaseSeckillResp);  // 二阶段消息
}